--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -8,15 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../public/css/normalize.css">
-    <link rel="stylesheet" href="../public/css/productDetail.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/productDetail.css">
 </head>
 <body>
     <!--acá se ubica la barra principal-->
     <div class="container">
         <div class="tarjeta">
             <div class="imagen">
-                <img src="../public/images/bombon-mousse-licor-w.png" alt="bombon-mousse-licor">
+                <img src="/img/bombon-mousse-licor-w.png" alt="bombon-mousse-licor">
             </div>
             <div class="info">
                 <h2>Bombon Mousse de licor de naranja x kg</h2>
