--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <!--CARRITO-->
                 <div class="carrito">
-                   <a href="/carrito"><i class="fa-solid fa-cart-arrow-down"></i></a> 
+                   <a href="/cart"><i class="fa-solid fa-cart-arrow-down"></i></a> 
                 </div>  
             </div>
         </div>
@@ -63,19 +63,19 @@
         </nav>
 </header>
         <!--BANNER-->
-       <div class="banner">
+        <div class="banner">
         <img src="/img/banner.png" alt="Banner Vraiklat">
         </div>
         
-       
+        
 <main>
         <!--PEDIDO HOY- 3 PRODUCTOS --->
         <section class="pedido-hoy">
             <h4 class="titular-pedido">¿Que vas a pedir hoy?</h4>
             <div class="pedido-productos">
                 <article class="conteiner-helado">
-                   <a href="/helados"> <img class="fotos-pedido" src="/img/helado-pedido.jpg" alt="Foto Helados"></a>
-                   <p>Helado</p> 
+                    <a href="/helados"> <img class="fotos-pedido" src="/img/helado-pedido.jpg" alt="Foto Helados"></a>
+                    <p>Helado</p> 
                 </article>
                 <article class="conteiner-chocolate">
                     <a href="/chocolates"> <img class="fotos-pedido" src="/img/choco-pedido.jpg" alt="Foto-Chocolate"></a>
@@ -88,13 +88,12 @@
             </div>
         </section>
 
-        <!--PRODUCTOS POPÚLARES - 4/6 PRODUCTOS --->
-      
+        <!--PRODUCTOS POPÚLARES - 6 PRODUCTOS --->
         <h4 class="titular-popular">Productos Populares</h4>
         <section class="productos-populares">
             <div class="productos">
                 <article>
-                    <img class="fotos" src="/img/popu-1.jpg" alt="Foto 1">
+                    <a href="/product"> <img class="fotos" src="/img/popu-1.jpg" alt="Foto 1"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Barra de chocolate</div>
