--- a/views/productCart.html
+++ b/views/productCart.html
@@ -117,7 +117,8 @@
                                 </div>
                             </td>
                             <td class="articulo-img">
-                                <div class="contenedor-articulo-img">   
+                                <div class="contenedor-articulo-img">  
+                                    <img class="imagen-articulo"  src="/img/alfajor-pedido.jpg" alt="foto alfajor"> 
                                 </div>
                             </td>
                             <td class="articulo-nombre">
@@ -148,7 +149,8 @@
                                 </div>
                             </td>
                             <td class="articulo-img">
-                                <div class="contenedor-articulo-img">   
+                                <div class="contenedor-articulo-img">
+                                    <img class="imagen-articulo"  src="/img/helado-pedido.jpg" alt="foto helado">    
                                 </div>
                             </td>
                             <td class="articulo-nombre">
