--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,66 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Vraiklat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/normalize.css"> 
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/c09ff292ee.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <%- include('./partials/head.ejs') %>
 </head>
 <body>
 <header>  
-    <!--NAV BAR MENOS DE 769PX ---------------------------------------------->
-        
-    <!-- LOGO 1-->
-        <div class="header-principal">
-            <div class="header-principal-1">
-                <!--BURGER-->
-                <div class="hamburguesa">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-                <div class="logo-2">
-                    <img src="/img/vraiklat-logo.png" alt="Logo Vraiklat-769pxVV">
-                </div>
+    <%- include('./partials/header.ejs') %>
 
-                <div class="logo-1">
-                    <img  src="/img/Logo.jpg" alt="Logo Vraiklat-769px^^">
-                </div>   
-            </div>
-            <!-- BUSCADOR-->    
-            <div class="iconos">
-                <div class="body-buscar">
-                    <div class="buscar">
-                        <input type="text" placeholder="Buscar" required>
-                        <div class="btn">
-                            <i class="fas fa-search icon"></i>
-                        </div>
-                    </div>
-                </div>
-                <!--LOGIN/REGISTER-->
-                <div class="login-register">
-                    <a href="/login"><i class="fa-solid fa-user"></i></a>
-                </div>
-                <!--CARRITO-->
-                <div class="carrito">
-                   <a href="/cart"><i class="fa-solid fa-cart-arrow-down"></i></a> 
-                </div>  
-            </div>
-        </div>
-
-         <!--NAV BAR-->
-         <nav class="barra-nav">
-            <ul class="opciones">
-                <li><a href="/home">HOME<a></li>
-                <li><a href="/vraiklat">VRAIKLAT<a></li>
-                <li><a href="/helados">HELADOS<a></li>
-                <li><a href="/chocolates">CHOCOLATES<a></li>
-                <li><a href="/alfajores">ALFAJORES<a></li>
-            </ul>
-        </nav>
+    <%- include('./partials/nav-bar.ejs') %>
 </header>
         <!--BANNER-->
         <div class="banner">
@@ -153,42 +100,7 @@
         </section>
     </main>
     <footer>
-        <div class="bottom-footer"> <!-- 5 elementos FOOTER --->
-            <div>
-                <h4 class="footer">Nosotros</h4>
-            </div>
-                
-            <div>
-                <div class="icon-preguntas">
-                    <i class="fa-solid fa-circle-question"></i>
-                </div>
-                    <h4 class="footer">Preguntas Frecuentes</h4>
-            </div>
-            
-            <div>
-                <div class="icon-term&cond">
-                    <i class="fas fa-file-contract"></i>
-                </div>
-                    <h4 class="footer">Términos y condiciones</h4>
-            </div>
-            
-            <div>
-                <div class="icon-metodos-pago">
-                    <i class="fa-brands fa-cc-mastercard"></i>
-                    <i class="fa-brands fa-cc-visa"></i>
-                    <i class="fa-brands fa-cc-amex"></i>
-                </div>
-                    <h4 class="footer">Metodos de pago</h4>
-            </div>
-            
-            <div>
-                <div class="icon-redes" >
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                </div>
-                    <h4 class="footer">Redes</h4>
-            </div>
-        </div>
+        <%- include('./partials/footer.ejs') %>
     </footer>  
 </body>
 </html>
