actualizacion de archivos ejs

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,7 +5,7 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <div class="logo-2">
-            <img src="/img/vraiklat-logo.png/" alt="Logo Vraiklat-769pxVV">
+            <img src="/img/vraiklat-logo.png" alt="Logo Vraiklat-769pxVV">
         </div>
         
         <div class="logo-1">
