--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,10 +1,10 @@
-*{
+/* *{
     display: flex;
     flex-direction: column;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;  
-}
+} */
 
 /* temporal */
 .barra {
@@ -20,14 +20,22 @@
     
 }
 
-body {
-	background-color: rgba(0, 0, 0, .1);
+/* body {
 	background-image: url("/img/fondoLogin.jpg");
 	background-repeat: repeat;
 	background-size: 100%;
 	background-attachment: scroll;
-   
-} 
+}  */
+
+
+.formulario-login{
+    background-color: rgba(0, 0, 0, .1);
+	background-image: url("/img/fondoLogin.jpg");
+	background-repeat: repeat;
+	background-size: 100%;
+	background-attachment: scroll;
+    height: 300px;
+}
 
 .banner{
     display:block;
