--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -95,8 +95,20 @@
                         <div class="descripcion">Helado</div>
                     </div>           
                 </article>
-
             </div>       
+        </section>
+        <section>
+            <h4 class="titular-pedido">Ubicacion locales</h4>
+            <div class="map-responsive">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.163900256963!2d-58.43564899567138!3d-34.57471915820801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb595d03aa8b5%3A0x36df34602538435e!2sDorrego%20Y%20Cabildo!5e0!3m2!1ses!2sar!4v1656123699943!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="map-responsive-textos">
+                <p class="texto-mapa">Local 1: Dorrego y cabildo</p>
+                <p class="texto-mapa">Local 2: Dorrego y cabildo</p>
+                <p class="texto-mapa">Local 3: Dorrego y cabildo</p>
+                <p class="texto-mapa">Local 4: Dorrego y cabildo</p>
+            </div>
+            
         </section>
     </main>
     <footer>
