--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,98 +1,3 @@
-/* *{
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;  
-} */
-
-/* temporal */
-.barra {
-
-    background-color: #ebebeb;
-    font-size: 14px;
-    width: 45px;
-}
-/*------------*/
-
-.login-navbar{
-    display: flex;
-    
-}
-
-/* body {
-	background-image: url("/img/fondoLogin.jpg");
-	background-repeat: repeat;
-	background-size: 100%;
-	background-attachment: scroll;
-}  */
-
-
-.formulario-login{
-    background-color: rgba(0, 0, 0, .1);
-	background-image: url("/img/fondoLogin.jpg");
-	background-repeat: repeat;
-	background-size: 100%;
-	background-attachment: scroll;
-    height: 300px;
-}
-
-.banner{
-    display:block;
-	background-repeat: repeat;
-	background-size: 100%;
-	background-attachment:fixed;
-    width: 104%;
-    padding: 0px 0px;
-    border: 2px solid #d9ad77;
-}
-
-/*p {
-	display: flex;
-    flex-direction: row;
-    width: 30px;
-    padding: 6px;
-	border: 1px solid #ebebeb;
-    background: white;
-    width: 40%;
-    border-radius: 5px;
-    justify-content: center;
-    margin: auto;
-	height: 15px;
-}
-*/
-
-.formulario{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    align-items: center;
-    justify-content: center;
-    padding-top: 10px;
-	color: black;    
-}
-
-form.formulario div {
-	
-    padding: 1px 0px;
-    width: 100%;
-	justify-content: center;
-    margin: 0px 0px 0px 60%;
-}
-.inp-usuario, .inp-contrase{
-    border: 1px solid #ebebeb;
-    border-radius: 8px;
-    height: 30px;
-    width: 60%;
-    padding-left: 18px;
-    background: #ffff;
-	border: 1px solid #593515;
-	border-radius: 5px;
-	justify-content: center;
-    font-size: 14px;
-    margin-top: 8px;
-    font-family: "gotham";
-}
 @font-face {
     font-family: "gotham";
     src: url(/public/css/Gotham_Book_Font.otf);
@@ -102,17 +7,90 @@ form.formulario div {
     font-family: "artifact";
     src: url(/public/css/Artifact.otf);
 }
+.formulario-login{
+    background-color: rgba(0, 0, 0, .1);
+	background-image: url("/img/fondoLogin.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-attachment: scroll;
+    height: 60vh;
+    padding-top: 20px;
+}
+
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+	color: black;
+    margin: auto;
+    padding-top: 10px;
+}
+
+form.formulario div {
+    width: 100%;
+    text-align: center;
+    
+}
+.inp-usuario, .inp-contrase{
+    border: 1px solid #ebebeb;
+    border-radius: 8px;
+    height: 30px;
+    width: 60%;
+    padding-left: 5px;
+    background: #ffff;
+	border: 1px solid #593515;
+	border-radius: 5px;
+	justify-content: center;
+    font-size: 0.7em;
+    margin-top: 8px;
+    font-family: "gotham";
+}
+
+.no-tienes-cuenta{
+    text-align: center;
+    color: black;
+    background-color: #D92B4B;
+    width: 40%;
+    margin:  10px auto;
+    padding: 5px;
+    border-radius: 8px;
+    height: 20%;
+    font-size: 700;
+    
+}
+
+.link-registrar{
+    font-size: 0.8em;
+}
+
+.link-registrar a:hover{
+    color: #593515;
+
+}
+
+.link-registrar a{
+    transition: all 1s;
+}
+
+
+.no-tienes-cuenta span{
+    font-size: 0.5em;
+    font-size: gottam;
+}
+
 
 button{
     border: 1px solid #593515;
     border-radius: 8px;
     height: 30px;
-    width: 60%;
+    width: 30%;
     background-color: #ffff;
     color: #593515;
     font-family: "gotham" bold;
-    font-size: 18px;
-    padding-left: 42px;
+    font-size: 0.9rem;
     margin-top: 10px;
     justify-content: center;
 }
@@ -148,6 +126,12 @@ input:Focus:invalid {
     .formulario{
         width: 70%;
     }
+    .no-tienes-cuenta{
+        width: 30%;
+        height: 20%;
+        
+    }
+
 
 }
 
@@ -162,10 +146,13 @@ input:Focus:invalid {
         
     }
     button {
-        width: 85%;
+        width: 40%;
+    }
+    .no-tienes-cuenta{
+        width: 20%;
+        height: 20%;
+        
     }
 
-    form.formulario div {
-        margin: 0px 0px 0px 160%;
-}
+    
 }
