--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,3 +8,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/formProducts.css">
 <link rel="stylesheet" href="/css/login.css">
+<link rel="stylesheet" href="/css/register.css">
+<link rel="stylesheet" href="/css/styleCart.css">
