--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -1,69 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vraiklat</title>
-    <script src="https://kit.fontawesome.com/c09ff292ee.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css"> 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/styleCart.css">
-
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
-    <header>  
-        <!--NAV BAR MENOS DE 769PX ---------------------------------------------->
-            
-        <!-- LOGO 1-->
-            <div class="header-principal">
-                <div class="header-principal-1">
-                    <!--BURGER-->
-                    <div class="hamburguesa">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
-                    <div class="logo-2">
-                        <img src="/img/vraiklat-logo.png" alt="Logo Vraiklat-769pxVV">
-                    </div>
-    
-                    <div class="logo-1">
-                        <img  src="/img/Logo.jpg" alt="Logo Vraiklat-769px^^">
-                    </div>   
-                </div>
-                <!-- BUSCADOR-->    
-                <div class="iconos">
-                    <div class="body-buscar">
-                        <div class="buscar">
-                            <input type="text" placeholder="Buscar" required>
-                            <div class="btn">
-                                <i class="fas fa-search icon"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <!--LOGIN/REGISTER-->
-                    <div class="login-register">
-                        <i class="fa-solid fa-user"></i>
-                    </div>
-                    <!--CARRITO-->
-                    <div class="carrito">
-                        <i class="fa-solid fa-cart-arrow-down"></i>
-                    </div>  
-                </div>
-            </div>
-    
-            <!--NAV BAR-->
-            <nav class="barra-nav">
-                <ul class="opciones">
-                    <li><a href="/home">HOME<a></li>
-                    <li><a href="/vraiklat">VRAIKLAT<a></li>
-                    <li><a href="/helados">HELADOS<a></li>
-                    <li><a href="/chocolates">CHOCOLATES<a></li>
-                    <li><a href="/alfajores">ALFAJORES<a></li>
-                </ul>
-            </nav>
+    <header class="header-login">  
+        <%- include('../partials/header.ejs') %>
+
+        <%- include('../partials/nav-bar.ejs') %>
+    </header> 
             <!--Carrito de Compras-->
         <div class="contenedor-carrito">
             <div class="contenedor-lista">
@@ -227,9 +172,9 @@
                 </div>
             </div>
         </div>
-
-
-    </header>
+        <footer class="footer-login">
+            <%- include('../partials/footer.ejs') %>
+        </footer> 
         
 </body>
 </html>
