Modificando archivos ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,8 +9,8 @@
 
     <%- include('./partials/nav-bar.ejs') %>
 </header>
-        <!--BANNER-->
-        <div class="banner">
+        <!--BANNER HOME-->
+        <div class="banner-home">
         <img src="/img/banner.png" alt="Banner Vraiklat">
         </div>
         
