--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,56 +40,56 @@
         <section class="productos-populares">
             <div class="productos">
                 <article>
-                    <a href="/product"> <img class="fotos" src="/img/popu-1.jpg" alt="Foto 1"></a>
+                    <a href="/products"> <img class="fotos" src="/img/popu-1.jpg" alt="Foto 1"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Barra de chocolate</div>
                     </div>
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-2.jpg" alt="Foto 2">
+                    <a href="/products"><img class="fotos" src="/img/popu-2.jpg" alt="Foto 2"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">  
                         <div class="descripcion">Chocolate </div>
                     </div>
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-3.jpg" alt="Foto 3">
+                    <a href="/products"> <img class="fotos" src="/img/popu-3.jpg" alt="Foto 3"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">                     
                         <div class="descripcion">Tableta chocolate</div>
                     </div>
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-5.jpg" alt="Foto 4">
+                    <a href="/products"><img class="fotos" src="/img/popu-5.jpg" alt="Foto 4"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Copa helado</div>
                     </div>           
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-4.jpg" alt="Foto 5">
+                    <a href="/products"><img class="fotos" src="/img/popu-4.jpg" alt="Foto 5"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Snack</div>
                     </div>           
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-6.jpg" alt="Foto 6">
+                    <a href="/products"><img class="fotos" src="/img/popu-6.jpg" alt="Foto 6"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Tableta</div>
                     </div>           
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-7.jpg" alt="Foto 7">
+                    <a href="/products"><img class="fotos" src="/img/popu-7.jpg" alt="Foto 7"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Choco almendras</div>
                     </div>           
                 </article>
                 <article>
-                    <img class="fotos" src="/img/popu-8.jpg" alt="Foto 8">
+                    <a href="/products"><img class="fotos" src="/img/popu-8.jpg" alt="Foto 8"></a>
                     <div class="truck"><i class="fa-solid fa-truck"></i></div>
                     <div class="info-producto">
                         <div class="descripcion">Helado</div>
