--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -1,6 +1,3 @@
-* {
-    box-sizing: border-box;
-}
 @font-face{
     font-family: "gotham";
     src: url(../font/Gotham_Book_Font.otf);
@@ -11,7 +8,7 @@
     src: url(../font/Artifact.otf);
 }
 
-
+/*
 body {
     margin: 0px;
     padding: 0px;
@@ -20,27 +17,23 @@ body {
     align-items: center;
     justify-content: center;
     font-family: gotham;
-    
-
-}
+}*/
 
 .container {
-    height: 95vh;
-    width: 80vw;
     background-color: #D9AD77;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    height: 80vh;
 }
 
 .tarjeta{
     background-color: #ffffff;
     width: 90%;
-    height: 80%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    max-height: 350px;
+    max-height: 380px;
 
 }
 
@@ -62,10 +55,9 @@ div.info  {
     padding: 5px;
 }
 
-img{
+img.imagen{
     width: 100%;
     height: 100%;
-    
 }
 
 h2 {
@@ -139,7 +131,8 @@ h2 {
         max-height: 280px;
 
     }
-    img{
+
+    img.imagen{
         height: 280px;
     }
     h2 {
@@ -267,5 +260,9 @@ h2 {
         border-radius: 40px;
         color: #ffff;
         background-color: #D92B4B;
+    }
+
+    img.imagen{
+        height: 100%;
     }
 }
