--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -10,3 +10,4 @@
 <link rel="stylesheet" href="/css/login.css">
 <link rel="stylesheet" href="/css/register.css">
 <link rel="stylesheet" href="/css/styleCart.css">
+<link rel="stylesheet" href="/css/productDetail.css">
