--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vraiklat</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=News+Cycle&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/productDetail.css">
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
-    <!--acá se ubica la barra principal-->
+    <header>
+        <%- include('../partials/header.ejs') %>
+
+        <%- include('../partials/nav-bar.ejs') %>
+    </header>
     <div class="container">
         <div class="tarjeta">
             <div class="imagen">
-                <img src="/img/bombon-mousse-licor-w.png" alt="bombon-mousse-licor">
+                <% if(!product.image){%>
+                    <img src="/img/popu-7.jpg" alt="Foto default" >
+                <%}else{%>
+                  <img src="<%= product.image%>" alt="Foto json" > 
+                <%}%>
             </div>
             <div class="info">
-                <h2>Bombon Mousse de licor de naranja x kg</h2>
+                <h2><%= product.name%></h2>
                 <div class="califi"></div>
                 <div class="precio">
-                    <h3>$6000</h3>
+                    <h3><%= product.price%></h3>
                 </div>
                 <div class="descrip">
                     <h4>Descripción</h4>
                 </div>
                 <div class="detalla-producto">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo odit molestias maxime deserunt ab asperiores, nostrum expedita facere veniam.</p> 
+                    <p><%= product.description%></p> 
                 </div>
                 <div class="boton">
                     <button type="submit" name="">Añadir al carrito</button>
                 </div>
 
+
+
             </div>
         </div>
     </div>
     
+    <footer>
+        <%- include('../partials/footer.ejs') %>
+    </footer>
 
 
 </body>
