--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -21,8 +21,8 @@
                 <input type="password" name="contraseña" class="inp-contrase" placeholder="Ingrese su contraseña" required minlength="8" >
             </div>
 
-            <div class="boton">
-                <button type="submit">Enviar</button>
+            <div class="boton-login">
+                <button type="submit" class="button-login">Enviar</button>
             </div>
         </form>
         <div class="no-tienes-cuenta">
