--- a/public/css/grilla.css
+++ b/public/css/grilla.css
@@ -9,10 +9,22 @@
     margin: auto;
 }
 
+.grilla a{
+    display: none;
+}
+
+a.hiper-fotos{
+    display: block;
+}
+
+
+
 
 .fotos-grilla{
-    height: 100%;
+    /*height: 70%;*/
     width: 70%;
+    height: 200px;
+    
 }
 
 .info-producto-grilla{
@@ -34,9 +46,18 @@ main section div.grilla article img:hover{
 
 
 
+
 @media (min-width:800px) {
     .grilla{
         padding: 70px;
         grid-template-columns: repeat(auto-fill,minmax(350px,1fr));
     }
+    
+    .fotos-grilla{
+    /*height: 70%;*/
+    width: 90%;
+    height: 300px;
+    }
+    
+
 }
