--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,19 @@ img.fotos{
 }
 
 /*NAV BAR*/
+/*<nav class="barra-nav">
+    <ul class="opciones">
+        <li><a href="/#">HOME<a></li>
+        <li><a href="/#">VRAIKLAT<a></li>
+        <li><a href="/#">HELADOS<a></li>
+        <li><a href="/#">CHOCOLATES<a></li>
+        <li><a href="/#">ALFAJORES<a></li>
+    </ul>
+</nav>*/
+
+nav.barra-nav ul.opciones li a:hover{
+    color: #730E16;
+}
 
 header{
     padding: 20px;
@@ -388,9 +401,8 @@ div.map-responsive-textos{
 
 /*footer*/
 footer{
-    padding: 35px;
-    padding-top: 50px;
-    height: 40px;
+    padding: 63px 35px 35px;
+    height: 450px;
 }
 
 div.bottom-footer{
@@ -402,7 +414,7 @@ div.bottom-footer{
 }
 
 h4.footer{
-    font-size: 20px;
+    font-size: 1rem;
     margin-top: 10px;
 }
 
@@ -510,6 +522,13 @@ main section.productos-populares article img {
     border-radius: 5%;
 }
 
+footer{
+    height: 200px;
+    padding: 63px 35px 35px;
+}
+
+
+
 }
 
 @media(min-width:1000px){
@@ -588,6 +607,11 @@ div.productos{
 
 .buscar input:focus {
     width: 240px;
+}
+
+footer{
+    height: 200px;
+    padding: 63px 35px 35px;
 }
 
 }
