--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <div class="iconos">
         <div class="body-buscar">
             <div class="buscar">
-                <input type="text" placeholder="Buscar" required>
+                <input type="text" placeholder="Buscar" required class="buscar-input">
                 <div class="btn">
                     <i class="fas fa-search icon"></i>
                 </div>
