--- a/src/views/partials/nav-bar.ejs
+++ b/src/views/partials/nav-bar.ejs
@@ -1,10 +1,11 @@
 <!--NAV BAR-->
 <nav class="barra-nav">
     <ul class="opciones">
-        <li><a href="/home">HOME<a></li>
-        <li><a href="/vraiklat">VRAIKLAT<a></li>
-        <li><a href="/helados">HELADOS<a></li>
-        <li><a href="/chocolates">CHOCOLATES<a></li>
-        <li><a href="/alfajores">ALFAJORES<a></li>
+        <li><a href="/#" class="button-navbar">HOME<a></li>
+        <li><a href="/#" class="button-navbar">VRAIKLAT<a></li>
+        <li><a href="/#" class="button-navbar">HELADOS<a></li>
+        <li><a href="/#" class="button-navbar">CHOCOLATES<a></li>
+        <li><a href="/#" class="button-navbar">ALFAJORES<a></li>
     </ul>
 </nav>
+
